# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyhermes"
description = "The Python interface to the Hermes message broker."
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
keywords = ["pyhermes"]
dynamic = ["version"]

authors = [
  { name="Allegrogroup", email="pylabs@allegro.pl" },
]

classifiers = [
    'Development Status :: 4 - Beta',
    'Framework :: Django',
    'Framework :: Django :: 1.7',
    'Framework :: Django :: 1.8',
    'Framework :: Django :: 1.9',
    'Framework :: Django :: 3.1',
    'Intended Audience :: Developers',
    'Natural Language :: English',
    'Programming Language :: Python :: 2',
    'Programming Language :: Python :: 2.7',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
]

dependencies = [
    "six",
    "requests",
]

[project.urls]
"Homepage" = "https://github.com/allegro/pyhermes"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["pyhermes*"]

[tool.setuptools.package-data]
"pyhermes" = ["py.typed"]

[tool.setuptools.dynamic]
version = {attr = "pyhermes.__version__"}
